--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -11,116 +11,11 @@
 </div>
 
 <div class="col-xs-12" id="profile_content">
-    <div class="col-xs-12 profile-block-header">
-    	{{ 'core.profile.block1.header'|trans|upper }}
-    </div>
-    <div class="profile-block-content" id="profile_block1-content">
-    	<div class="row" id="profile_block1-content-title">
-    		<h3>
-    			{{ 'core.profile.block1.content.title'|trans|upper }}
+    {% include '@FOSUser/Profile/blocks/infos/infos.html.twig' %}
 
-	    		{% image 'http://assets.fhuszti.tech/nao/separator-angle.png' %}
-					<img src="{{ asset_url }}" alt="{{ 'core.site.alt_img'|trans }}" class="pull-right" />
-				{% endimage %}
-    		</h3>
-    	</div>
+    {% include '@FOSUser/Profile/blocks/observations/observations.html.twig' %}
 
-    	<div class="fos_user_user_show row" id="profile_block1-content-infos">
-	    	<div class="row">
-		    	<div class="col-xs-12 col-sm-4 bold">
-		    		{{ 'core.profile.block1.content.surname'|trans }}
-		    	</div>
-		    	<div class="col-xs-12 col-sm-4">
-		    		{{ user.surname }}
-		    	</div>
-	    	</div>
+    {% include '@FOSUser/Profile/blocks/photos/photos.html.twig' %}
 
-	    	<div class="row">
-		    	<div class="col-xs-12 col-sm-4 bold">
-		    		{{ 'core.profile.block1.content.firstname'|trans }}
-		    	</div>
-		    	<div class="col-xs-12 col-sm-4">
-		    		{{ user.firstName }}
-		    	</div>
-	    	</div>
-
-	    	<div class="row">
-		    	<div class="col-xs-10 col-sm-8 no-padding">
-			    	<div class="col-xs-12 col-sm-6 bold">
-			    		{{ 'core.profile.block1.content.email'|trans }}
-			    	</div>
-			    	<div class="col-xs-12 col-sm-6">
-			    		{{ user.email }}
-			    	</div>
-		    	</div>
-		    	<div data-toggle="modal" href="#profile_email-modal" class="col-xs-2 col-sm-4">
-		    		{% image 'http://assets.fhuszti.tech/nao/profile/profile-edit.png' %}
-						<img src="{{ asset_url }}" title="{{ 'core.profile.block1.content.edit'|trans }}" alt="{{ 'core.profile.block1.content.edit'|trans }}" data-action="{{ path('fos_user_profile_edit') }}" id="profile_email-link" />
-					{% endimage %}
-		    	</div>
-	    	</div>
-
-	    	<div class="row">
-		    	<div class="col-xs-10 col-sm-8 no-padding">
-			    	<div class="col-xs-12 col-sm-6 bold">
-			    		{{ 'core.profile.block1.content.password'|trans }}
-			    	</div>
-			    	<div class="col-xs-12 col-sm-6">
-			    		*********
-			    	</div>
-		    	</div>
-		    	<div data-toggle="modal" href="#profile_pass-modal" class="col-xs-2 col-sm-4">
-		    		{% image 'http://assets.fhuszti.tech/nao/profile/profile-edit.png' %}
-						<img src="{{ asset_url }}" alt="{{ 'core.profile.block1.content.edit'|trans }}" data-action="{{ path('fos_user_change_password') }}" id="profile_pass-link" />
-					{% endimage %}
-		    	</div>
-	    	</div>
-    	</div>
-
-    	<div class="modal fade" id="profile_email-modal">
-		  	<div class="modal-dialog">
-			    <div class="modal-content">
-			      	<div class="modal-header">
-			        	<button type="button" class="close" data-dismiss="modal">x</button>
-			        	<h4 class="modal-title">{{ 'core.profile.modal.email.title'|trans }}</h4>
-			        </div>
-			      	
-			      	<div class="modal-body" id="profile_email-modal-body">
-			      		<!-- filled with AJAX -->
-			      	</div>
-
-			    </div>
-		  	</div>
-		</div>
-
-		<div class="modal fade" id="profile_pass-modal">
-		  	<div class="modal-dialog">
-			    <div class="modal-content">
-			      	<div class="modal-header">
-			        	<button type="button" class="close" data-dismiss="modal">x</button>
-			        	<h4 class="modal-title">{{ 'core.profile.modal.password.title'|trans }}</h4>
-			        </div>
-			      	
-			      	<div class="modal-body" id="profile_pass-modal-body">
-			      		<!-- filled with AJAX -->
-			      	</div>
-
-			    </div>
-		  	</div>
-		</div>
-    </div>
-
-    <div class="col-xs-12 profile-block-header">
-    	{{ 'core.profile.block2.header'|trans|upper }}
-    </div>
-     <div class="col-xs-12 profile-block-content">
-     	{{ 'core.profile.block2.content'|trans }}
-    </div>
-
-    <div class="col-xs-12 profile-block-header">
-    	{{ 'core.profile.block3.header'|trans|upper }}
-    </div>
-    <div class="col-xs-12 profile-block-content">
-    	{{ 'core.profile.block3.content'|trans }}
-    </div>
+    {% include '@FOSUser/Profile/modals.html.twig' %}
 </div>
