--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -46,7 +46,7 @@
                     {% endblock %}
                 </div>
 
-                {% if homepage is not defined %}
+                {% if homePage is not defined %}
                     <div class="hidden-xs col-sm-2" id="second-menu">
                         {{ include('second-menu.html.twig') }}
                     </div>
