Préparation au design de l'accueil

--- a/app/Resources/views/core/index.html.twig
+++ b/app/Resources/views/core/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
-{% set homepage = true %}
+{% set homePage = true %}
 
 {% block stylesheets %}
     {% stylesheets filter='cssrewrite, ?scssphp'
