Adaptation des pages FOSUserBundle pour bien réagir avec le menu

--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,4 +1,5 @@
 {% extends "@FOSUser/layout.html.twig" %}
+{% set profilePage = true %}
 
 {% import "@FOSUser/Profile/macros/_macroInfosModal.html.twig" as macroInfosModal %}
 {% import "@FOSUser/Profile/macros/_macroObservationDisplay.html.twig" as macroObservationDisplay %}
