--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,4 +1,5 @@
 {% extends "@FOSUser/layout.html.twig" %}
+{% set loginPage = true %}
 
 {% block title %}
     {{ 'core.login.title'|trans }} - {{ parent() }}
