--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -1,4 +1,5 @@
 {% extends "@FOSUser/layout.html.twig" %}
+{% set registerPage = true %}
 {% form_theme form 'form/form_errors.html.twig' %}
 
 {% block title %}
