--- a/app/Resources/views/core/index.html.twig
+++ b/app/Resources/views/core/index.html.twig
@@ -2,155 +2,174 @@
 {% set homePage = true %}
 
 {% block stylesheets %}
+    {{ parent() }}
+
     {% stylesheets filter='cssrewrite, ?scssphp'
-                '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'
-                '//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css'
-                'bundles/app/css/main.css'
-                'bundles/app/css/second-menu.css'
-                'bundles/app/css/header.css'
-                'bundles/app/css/home.css'
-                'bundles/app/css/footer.css' %}
-                <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
-            {% endstylesheets %}
+        'bundles/app/css/home.css' %}
+        <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
+    {% endstylesheets %}
 {% endblock %}
+
 {% block body %}
-	<div id="sliderHome" class="container-fluid">
-        <div class="row">
-            <div id="slider" class="col-lg-12">
-                <div id="carousel" class="carousel slide" data-ride="carousel">
-                    <ul id="navCollapse" class="carousel-indicators">
-                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel" data-slide-to="1"></li>
-                        <li data-target="#carousel" data-slide-to="2"></li>
-                    </ul>
-                    <div class="carousel-inner">              
-                        <div class="item active"> 
-                            {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                                <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/home/slide-observation.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                            {% endimage %}
-                        </div>
-                        <div class="item">
-                            {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                                <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/home/slide-project.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                            {% endimage %}
-                        </div>
-                        <div class="item">
-                            {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                                <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/home/slide-search.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                            {% endimage %}
-                        </div>
-                    </div>
-                    </div>
-                    <a class="left carousel-control" href="#carousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="mainBlocHome">
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/observation.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title1'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p1'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/project.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title2'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p2'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/search.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title3'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p3'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <div class="row">
-            <div class="col-sm-4">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/register.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title4'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p4'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/profile.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title5'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p5'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-                <div class="divLink">
-                    <div class="icon">
-                        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-                            <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/second-menu/contact.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
-                        {% endimage %}
-                    </div>
-                    <div class="titleBlocHome">
-                        <p>{{ 'core.home.title6'|trans|upper }}</p>
-                        <hr id="line" />
-                    </div>
-                    <div class="blocTextHome">
-                        <p>{{ 'core.home.p6'|trans }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+	<div id="carousel" class="row carousel slide" data-ride="carousel">
+	  	<ol class="carousel-indicators">
+		    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel" data-slide-to="1"></li>
+		    <li data-target="#carousel" data-slide-to="2"></li>
+	  	</ol>
+
+	  	<div class="carousel-inner">
+		    <div class="item active">
+			    <a href="{{ path('core_home') }}" title="{{ 'core.header.observation.link'|trans }}">
+	                {% image 'http://assets.fhuszti.tech/nao/home/slide-observation.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.observation.link'|trans}}" />
+	                {% endimage %}
+	            </a>
+		    </div>
+		    <div class="item">
+		    	<a href="{{ path('core_home') }}" title="{{ 'core.header.search.link'|trans }}">
+	                {% image 'http://assets.fhuszti.tech/nao/home/slide-search.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.search.link'|trans}}" />
+	                {% endimage %}
+	            </a>
+		    </div>
+		    <div class="item">
+		    	<a href="{{ path('core_home') }}" title="{{ 'core.header.project.link'|trans }}">
+	                {% image 'http://assets.fhuszti.tech/nao/home/slide-project.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.project.link'|trans}}" />
+	                {% endimage %}
+	            </a>
+		    </div>
+	  	</div>
+
+	  	<a class="left carousel-control" href="#carousel" data-slide="prev">
+	    	<span class="glyphicon glyphicon-chevron-left"></span>
+	  	</a>
+	  	<a class="right carousel-control" href="#carousel" data-slide="next">
+	    	<span class="glyphicon glyphicon-chevron-right"></span>
+	  	</a>
+	</div>
+
+    <div id="mainContent" class="row">
+    	<div class="col-xs-12 col-sm-6 col-md-4 home-block">
+	    	<a href="{{ path('core_home') }}" title="{{ 'core.header.observation.link'|trans }}">
+		    	<div class="col-xs-12 alert alert-info">
+		    		{% image 'http://assets.fhuszti.tech/nao/second-menu/observation.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.observation.link'|trans}}" />
+	                {% endimage %}
+		    	</div>
+		    	<div class="col-xs-12 home-block-content">
+		    		<h3>{{ 'core.home.block_obs.title'|trans }}</h3>
+
+		    		<p>
+		    			{{ 'core.home.block_obs.text'|trans }}
+		    		</p>
+		    	</div>
+	    	</a>
+    	</div>
+
+    	<div class="col-xs-12 col-sm-6 col-md-4 home-block">
+    		<a href="{{ path('core_home') }}" title="{{ 'core.header.project.link'|trans }}">
+		    	<div class="col-xs-12 alert alert-info">
+		    		{% image 'http://assets.fhuszti.tech/nao/second-menu/project.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.project.link'|trans}}" />
+	                {% endimage %}
+		    	</div>
+		    	<div class="col-xs-12 home-block-content">
+		    		<h3>{{ 'core.home.block_project.title'|trans }}</h3>
+
+		    		<p>
+		    			{{ 'core.home.block_project.text'|trans }}
+		    		</p>
+		    	</div>
+	    	</a>
+    	</div>
+
+    	<div class="col-xs-12 col-sm-6 col-md-4 home-block">
+    		<a href="{{ path('core_home') }}" title="{{ 'core.header.search.link'|trans }}">
+		    	<div class="col-xs-12 alert alert-info">
+		    		{% image 'http://assets.fhuszti.tech/nao/second-menu/search.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.search.link'|trans}}" />
+	                {% endimage %}
+		    	</div>
+		    	<div class="col-xs-12 home-block-content">
+		    		<h3>{{ 'core.home.block_search.title'|trans }}</h3>
+
+		    		<p>
+		    			{{ 'core.home.block_search.text'|trans }}
+		    		</p>
+		    	</div>
+	    	</a>
+    	</div>
+
+    	<div class="col-xs-12 col-sm-6{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %} col-md-5 col-md-push-1{% else %} col-md-4{% endif %} home-block">
+    		<a href="{{ path('core_home') }}" title="{{ 'core.header.contact.link'|trans }}">
+		    	<div class="col-xs-12 alert alert-info">
+		    		{% image 'http://assets.fhuszti.tech/nao/second-menu/contact.png' %}
+	                    <img src="{{ asset_url }}" alt="{{'core.header.contact.link'|trans}}" />
+	                {% endimage %}
+		    	</div>
+		    	<div class="col-xs-12 home-block-content">
+		    		<h3>{{ 'core.home.block_contact.title'|trans }}</h3>
+
+		    		<p>
+		    			{{ 'core.home.block_contact.text'|trans }}
+		    		</p>
+		    	</div>
+	    	</a>
+    	</div>
+
+    	{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+    		<div class="col-xs-12 col-md-5 col-md-push-1 home-block" id="home_block-profile">
+	    		<a href="{{ path('core_home') }}" title="{{ 'core.header.profile.link'|trans }}">
+			    	<div class="col-xs-12 alert alert-info">
+			    		{% image 'http://assets.fhuszti.tech/nao/second-menu/profile.png' %}
+		                    <img src="{{ asset_url }}" alt="{{'core.header.profile.link'|trans}}" />
+		                {% endimage %}
+			    	</div>
+			    	<div class="col-xs-12 home-block-content">
+			    		<h3>{{ 'core.home.block_profile.title'|trans }}</h3>
+
+			    		<p>
+			    			{{ 'core.home.block_profile.text'|trans }}
+			    		</p>
+			    	</div>
+		    	</a>
+	    	</div>
+    	{% else %}
+	    	<div class="col-xs-12 col-sm-6 col-md-4 home-block">
+	    		<a href="{{ path('core_home') }}" title="{{ 'core.header.registration.link'|trans }}">
+			    	<div class="col-xs-12 alert alert-info">
+			    		{% image 'http://assets.fhuszti.tech/nao/second-menu/register.png' %}
+		                    <img src="{{ asset_url }}" alt="{{'core.header.registration.link'|trans}}" />
+		                {% endimage %}
+			    	</div>
+			    	<div class="col-xs-12 home-block-content">
+			    		<h3>{{ 'core.home.block_register.title'|trans }}</h3>
+
+			    		<p>
+			    			{{ 'core.home.block_register.text'|trans }}
+			    		</p>
+			    	</div>
+		    	</a>
+	    	</div>
+
+	    	<div class="col-xs-12 col-sm-6 col-md-4 home-block">
+	    		<a href="{{ path('core_home') }}" title="{{ 'core.header.login.link'|trans }}">
+			    	<div class="col-xs-12 alert alert-info">
+			    		{% image 'http://assets.fhuszti.tech/nao/second-menu/login.png' %}
+		                    <img src="{{ asset_url }}" alt="{{'core.header.login.link'|trans}}" />
+		                {% endimage %}
+			    	</div>
+			    	<div class="col-xs-12 home-block-content">
+			    		<h3>{{ 'core.home.block_login.title'|trans }}</h3>
+
+			    		<p>
+			    			{{ 'core.home.block_login.text'|trans }}
+			    		</p>
+			    	</div>
+		    	</a>
+	    	</div>
+    	{% endif %}
     </div>
 {% endblock %}
