--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -41,7 +41,7 @@
             {{ include('header.html.twig') }}
 
             <div class="container" id="wrapper">
-                <div id="content" role="main"{% if homepage is not defined %} class="col-sm-10"{% endif %}>
+                <div id="content" role="main"{% if homePage is not defined %} class="col-sm-10"{% endif %}>
                     {% block body %}
                     {% endblock %}
                 </div>
