--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -11,6 +11,7 @@ body {
 }
 
 #login_content {
+	position: relative;
 	margin-top: 45px;
 	padding-left: 50px;
 	padding-right: 50px;
@@ -18,6 +19,16 @@ body {
 	background-color: rgb(187, 223, 180);
 	background-color: rgba(187, 223, 180, 0.95);
 	border: 1px outset #eee;
+}
+#login_content #login_bird {
+	background-image: url('http://assets.fhuszti.tech/nao/login/login-bird.png');
+	background-size: 160px;
+	background-repeat: no-repeat;
+	height: 180px;
+	width: 160px;
+	position: absolute;
+	right: 20px;
+	bottom: 10px;
 }
 #login_content .login_error {
 	margin-top: 30px;
@@ -35,6 +46,9 @@ body {
 }
 #login_content #login_remember-group, #login_content #login_submit-group {
 	text-align: center;
+}
+#login_content #login_submit-group {
+	margin-top: 60px;
 }
 
 #login_content #login_pass-label-group {
@@ -103,6 +117,13 @@ body {
 		padding-left: 20px;
 	}
 
+	#login_content #login_bird {
+		background-size: 120px;
+		height: 140px;
+		width: 120px;
+		right: 10px;
+		bottom: 20px;
+	}
 	#login_content form label {
 		margin-bottom: 15px;
 	}
@@ -116,7 +137,15 @@ body {
 	#login_content .modal .form-group {
 		text-align: left;
 	}
+	#login_content #login_submit-group {
+		margin-top: inherit;
+	}
 	#login_content #login_modal-submit-group, #login_content form div:last-child {
 		text-align: center;
+	}
+}
+@media (max-width: 479px) {
+	#login_content #login_bird {
+		display: none;
 	}
 }
