Design quasi-terminé pour la page d'inscription

--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -73,7 +73,9 @@
         </div>
 	    
 	    <div class="form-group" id="register_submit-group">
-	        <input type="submit" class="btn btn-info btn-lg" value="{{ 'core.register.submit'|trans }}" />
+	        <input type="submit" class="btn btn-info btn-lg" value="{{ 'core.register.submit'|trans|upper }}" />
 	    </div>
 	{{ form_end(form) }}
+
+    <div id="register_bird" class=""></div>
 </div>
