--- a/app/Resources/FOSUserBundle/views/Resetting/email.txt.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/email.txt.twig
@@ -1,13 +1,14 @@
-{% trans_default_domain 'FOSUserBundle' %}
 {% block subject %}
-{%- autoescape false -%}
-{{ 'resetting.email.subject'|trans({'%username%': user.username}) }}
-{%- endautoescape -%}
+	{%- autoescape false -%}
+		{{ 'core.reset_pass.email.subject'|trans({'%username%': user.firstName}) }}
+	{%- endautoescape -%}
 {% endblock %}
 
 {% block body_text %}
-{% autoescape false %}
-{{ 'resetting.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}
-{% endautoescape %}
 {% endblock %}
-{% block body_html %}{% endblock %}
+
+{% block body_html %}
+	{% autoescape false %}
+		<em>{{ 'core.reset_pass.email.message'|trans({'%username%': user.firstName, '%confirmationUrl%': confirmationUrl}) }}</em>
+	{% endautoescape %}
+{% endblock %}
